fixed hero item alignment issue

--- a/canoe-css/style.css
+++ b/canoe-css/style.css
@@ -132,6 +132,7 @@ main {
 .info-item {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
